chore(sync): [co-76ca] - Commit pending changes before demo • add call logs, update refs, ignore customer-gitlab submodules agentID=019a362f-76ca-7272-909e-362716cf233d

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ exchange-assets-tokenization-rwa/
 *data/*
 # memory-bank/_unstructured/
 *.txt
+# Ignore customer gitlab submodules until configured
+repositories/customer-gitlab/**
