--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ exchange-assets-tokenization-rwa/
 *.txt
 # Ignore customer gitlab submodules until configured
 repositories/customer-gitlab/**
+data/
