--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "repositories/customer-gitlab/docs-cfa-rwa"]
 	path = repositories/customer-gitlab/docs-cfa-rwa
 	url = git@git.telex.global:cfa/docs-cfa.git
+[submodule "repositories/customer-gitlab/ois-cfa"]
+	path = repositories/customer-gitlab/ois-cfa
+	url = git@git.telex.global:npk/ois-cfa.git
