--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "repositories/customer-gitlab/ois-cfa"]
 	path = repositories/customer-gitlab/ois-cfa
 	url = git@git.telex.global:npk/ois-cfa.git
+[submodule "repositories/customer-gitlab/velvet"]
+	path = repositories/customer-gitlab/velvet
+	url = git@git.telex.global:npk/velvet.git
