chore(submodules): [co-76ca] - Add SDD-shotgun-pro submodule • Path: repositories/ai/SDD-shotgun-pro • URL: git@github.com:developerisnow/SDD-shotgun-pro.git agentID=019a362f-76ca-7272-909e-362716cf233d

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "repositories/customer-gitlab/velvet"]
 	path = repositories/customer-gitlab/velvet
 	url = git@git.telex.global:npk/velvet.git
+[submodule "repositories/ai/SDD-shotgun-pro"]
+	path = repositories/ai/SDD-shotgun-pro
+	url = git@github.com:developerisnow/SDD-shotgun-pro.git
