feat(manifests): [co-76ca] - Introduce project.manifest.json and enrich indices • Add root SSOT with checksums and submodules • Add meta blocks and timestamps; keep backward compat • Provide jq validator script; deprecate tree.manifest.json agentID=019a362f-76ca-7272-909e-362716cf233d

--- a/manifests/communication.manifest.json
+++ b/manifests/communication.manifest.json
@@ -1,12 +1,19 @@
 {
     "id": "communication",
     "description": "Index of key project communication logs.",
+    "meta": {
+      "version": "1.1.0",
+      "updated": "2025-11-10T19:04:00+03:00",
+      "edited_by": ["co-76ca"]
+    },
     "logs": [
       {
         "id": "intro-call-20251022",
         "path": "./memory-bank/context/current-context/communication-log/20251022-1930-yury-founder-intro-call.md",
         "type": "call-transcript",
         "participants": ["yury-m", "alex-a"],
+        "timestamp": "2025-10-22T19:30:00+03:00",
+        "tags": ["intro", "vision", "mvp"],
         "summary": "Initial project introduction. Yury outlines the vision for a licensed RWA platform in Russia. Discusses team, tech, and a one-month MVP goal."
       },
       {
@@ -14,6 +21,8 @@
         "path": "./memory-bank/context/current-context/communication-log/20251103-1530-call-Yury-Aleksandr-Alex-setup-work.md",
         "type": "call-transcript",
         "participants": ["yury-m", "aleksandr-o", "alex-a"],
+        "timestamp": "2025-11-03T15:30:00+03:00",
+        "tags": ["team-sync", "architecture", ".NET", "C4"],
         "summary": "First team sync. Discussion on roles, tech stack (.NET vs others), architecture (C4, domains), and initial deliverables. Yury pushes for speed, Alex A. and Aleksandr O. discuss need for proper architecture."
       },
       {
@@ -21,6 +30,8 @@
         "path": "./memory-bank/context/current-context/communication-log/20251105-1030-call-Alex-and-Aleksandr__Tech-Sync.md",
         "type": "call-transcript",
         "participants": ["alex-a", "aleksandr-o"],
+        "timestamp": "2025-11-05T10:30:00+03:00",
+        "tags": ["tech-sync", "SSOT", "Kubernetes", "Keycloak"],
         "summary": "Technical alignment between Alex A. and Aleksandr O. Discussed SSOT, GitLab vs. Nextcloud, existing Kubernetes/Keycloak setup, and the need to align on a development process."
       },
       {
@@ -28,6 +39,8 @@
         "path": "./memory-bank/context/current-context/communication-log/20251004-20251029-chat-telegram-main-YuryMyshinskiy-1016927916.md",
         "type": "chat-log",
         "participants": ["yury-m", "alex-a"],
+        "period": { "from": "2025-10-04", "to": "2025-10-29" },
+        "tags": ["payment", "planning", "competitors"],
         "summary": "Early discussions, payment negotiations, initial research on competitors and tech."
       }
     ]
