--- a/manifests/docs.manifest.json
+++ b/manifests/docs.manifest.json
@@ -1,12 +1,18 @@
 {
     "id": "docs",
     "description": "Catalog of critical project documents.",
+    "meta": {
+      "version": "1.1.0",
+      "updated": "2025-11-10T19:04:00+03:00",
+      "edited_by": ["co-76ca"]
+    },
     "documents": [
       {
         "id": "competitor-analysis-xlsx",
         "path": "./memory-bank/_unstructured/Действующие информационные платформы и операторы ЦФА.xlsx",
         "type": "spreadsheet",
         "owner": "yury-m",
+        "tags": ["competitors", "analysis"],
         "summary": "Primary spreadsheet with analysis of ~20 Russian RWA competitors."
       },
       {
@@ -14,6 +20,7 @@
         "path": "./memory-bank/context/current-context/additional-info-for-analysing/20251004-estimation-from-outsource-company/20251004-estimation-from-outsource-company.md",
         "type": "estimation",
         "owner": "yury-m",
+        "tags": ["estimation", "budget"],
         "summary": "An external company's estimation for the project, mentioned as ~6000 hours."
       },
       {
@@ -21,6 +28,7 @@
         "path": "./memory-bank/data/memory-bank/files/Цифровые_активы_Руководство_по_ЦФА_и_платформе_Токеон.md",
         "type": "competitor-doc",
         "owner": "boris-m",
+        "tags": ["competitor", "tokeon"],
         "summary": "Official guide for the Tokeon platform, a key competitor."
       },
       {
@@ -28,6 +36,7 @@
         "path": "./memory-bank/data/memory-bank/files/Цифровые_финансовые_активы_Атомайз.pdf",
         "type": "competitor-doc",
         "owner": "boris-m",
+        "tags": ["competitor", "atomyze"],
         "summary": "Official book from Atomyze, another key competitor."
       }
     ]
