--- a/manifests/domains.manifest.json
+++ b/manifests/domains.manifest.json
@@ -1,41 +1,64 @@
 {
     "id": "domains",
     "description": "Core business domains of the RWA platform.",
+    "meta": {
+      "version": "1.1.0",
+      "updated": "2025-11-10T19:04:00+03:00",
+      "edited_by": ["co-76ca"]
+    },
     "domains": [
       {
         "id": "identity",
         "description": "Handles user/entity registration, KYC/KYB, authentication (Keycloak), and authorization (RBAC/ABAC).",
         "owner": "aleksandr-o",
+        "status": "planned",
+        "capabilities": ["kyc", "kyb", "authn", "authz"],
+        "repos": ["ois-cfa", "main-docs"],
         "critical_docs": ["docs-cfa-rwa/architecture/11-Sequence-ESIA-OIDC.md"]
       },
       {
         "id": "tokenization",
         "description": "Manages the lifecycle of digital assets: creation (minting), issuance, and corporate actions.",
         "owner": "alex-a",
+        "status": "planned",
+        "capabilities": ["minting", "issuance", "corp-actions"],
+        "repos": ["ois-cfa", "main-docs"],
         "critical_docs": ["docs-cfa-rwa/legal/01-ПравилаИС-template.md"]
       },
       {
         "id": "exchange",
         "description": "Core trading functionality: order book, matching engine, market data. Initially focused on primary issuance.",
         "owner": "alex-a",
+        "status": "planned",
+        "capabilities": ["orderbook", "matching", "market-data"],
+        "repos": ["ois-cfa", "velvet", "main-docs"],
         "critical_docs": ["docs-cfa-rwa/architecture/10-HighLevel-Architecture.md"]
       },
       {
         "id": "settlement",
         "description": "Handles Delivery-vs-Payment (DvP) logic, integration with banking rails, and transaction reconciliation.",
         "owner": "aleksandr-o",
+        "status": "planned",
+        "capabilities": ["dvp", "bank-integration", "reconciliation"],
+        "repos": ["ois-cfa", "main-docs"],
         "critical_docs": []
       },
       {
         "id": "compliance",
         "description": "AML/CFT monitoring, rule engine, sanctions screening, and regulatory reporting.",
         "owner": "yury-m",
+        "status": "planned",
+        "capabilities": ["aml", "cft", "rule-engine", "sanctions"],
+        "repos": ["main-docs"],
         "critical_docs": ["docs-cfa-rwa/security/20-ГОСТ57580-Чеклист.md"]
       },
       {
         "id": "custody",
         "description": "Manages wallets and keys, likely integrating with an HSM or external custodian.",
         "owner": "aleksandr-o",
+        "status": "planned",
+        "capabilities": ["wallets", "keys", "hsm"],
+        "repos": ["ois-cfa", "main-docs"],
         "critical_docs": []
       }
     ]
